Add shipping option in admin panel, Rebuild cart and created option to add item to cart Rename shop to OwlShop, Remove class AppController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
 app.mail.username=null
 app.mail.password=null
+app.name=Owl Shop
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
