--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
       url: jdbc:mysql://localhost:3306/simpleshop
-      username: root
-      password:
+      username: user
+      password: user
       testWhileIdle: true
       validationQuery: SELECT 1
   jpa:
